--- a/assets/components/discuss/themes/modx-dev/sass/_forums.sass
+++ b/assets/components/discuss/themes/modx-dev/sass/_forums.sass
@@ -227,7 +227,7 @@ h3.forum
         float: right
         &:first-child
             border-top: none
-            padding-top: 3%
+
         &:last-child
             padding-bottom: 5%
         .dis-content
